
INCLUDE_DIRECTORIES( 
		${BULLET_PHYSICS_SOURCE_DIR}/src
		${BULLET_PHYSICS_SOURCE_DIR}/examples
		${BULLET_PHYSICS_SOURCE_DIR}/examples/ThirdPartyLibs
		${BULLET_PHYSICS_SOURCE_DIR}/examples/ThirdPartyLibs/enet/include
        ${BULLET_PHYSICS_SOURCE_DIR}/examples/ThirdPartyLibs/clsocket/src
		${BULLET_PHYSICS_SOURCE_DIR}/Extras/HACD
		${BULLET_PHYSICS_SOURCE_DIR}/Extras/Serialize/BulletXmlWorldImporter
		${BULLET_PHYSICS_SOURCE_DIR}/Extras/Serialize/BulletWorldImporter
		${BULLET_PHYSICS_SOURCE_DIR}/Extras/Serialize/BulletFileLoader
		${BULLET_PHYSICS_SOURCE_DIR}/Extras
		${BULLET_PHYSICS_SOURCE_DIR}/Extras/Serialize
		${BULLET_PHYSICS_SOURCE_DIR}/libbulletc/src		
  )

SET(libbulletc_SRCS
../libbulletc/src/btActionInterface_wrap.cpp
../libbulletc/src/btActionInterface_wrap.h
../libbulletc/src/btAlignedObjectArray_wrap.cpp
../libbulletc/src/btAlignedObjectArray_wrap.h
../libbulletc/src/btAxisSweep3_wrap.cpp
../libbulletc/src/btAxisSweep3_wrap.h
../libbulletc/src/btBox2dBox2dCollisionAlgorithm_wrap.cpp
../libbulletc/src/btBox2dBox2dCollisionAlgorithm_wrap.h
../libbulletc/src/btBox2dShape_wrap.cpp
../libbulletc/src/btBox2dShape_wrap.h
../libbulletc/src/btBoxBoxCollisionAlgorithm_wrap.cpp
../libbulletc/src/btBoxBoxCollisionAlgorithm_wrap.h
../libbulletc/src/btBoxBoxDetector_wrap.cpp
../libbulletc/src/btBoxBoxDetector_wrap.h
../libbulletc/src/btBoxCollision_wrap.cpp
../libbulletc/src/btBoxCollision_wrap.h
../libbulletc/src/btBoxShape_wrap.cpp
../libbulletc/src/btBoxShape_wrap.h
../libbulletc/src/btBroadphaseInterface_wrap.cpp
../libbulletc/src/btBroadphaseInterface_wrap.h
../libbulletc/src/btBroadphaseProxy_wrap.cpp
../libbulletc/src/btBroadphaseProxy_wrap.h
../libbulletc/src/btBulletFile_wrap.cpp
../libbulletc/src/btBulletFile_wrap.h
../libbulletc/src/btBulletWorldImporter_wrap.cpp
../libbulletc/src/btBulletWorldImporter_wrap.h
../libbulletc/src/btBulletXmlWorldImporter_wrap.cpp
../libbulletc/src/btBulletXmlWorldImporter_wrap.h
../libbulletc/src/btBvhTriangleMeshShape_wrap.cpp
../libbulletc/src/btBvhTriangleMeshShape_wrap.h
../libbulletc/src/btCapsuleShape_wrap.cpp
../libbulletc/src/btCapsuleShape_wrap.h
../libbulletc/src/btCharacterControllerInterface_wrap.cpp
../libbulletc/src/btCharacterControllerInterface_wrap.h
../libbulletc/src/btCollisionAlgorithm_wrap.cpp
../libbulletc/src/btCollisionAlgorithm_wrap.h
../libbulletc/src/btCollisionConfiguration_wrap.cpp
../libbulletc/src/btCollisionConfiguration_wrap.h
../libbulletc/src/btCollisionCreateFunc_wrap.cpp
../libbulletc/src/btCollisionCreateFunc_wrap.h
../libbulletc/src/btCollisionDispatcherMt_wrap.cpp
../libbulletc/src/btCollisionDispatcherMt_wrap.h
../libbulletc/src/btCollisionDispatcher_wrap.cpp
../libbulletc/src/btCollisionDispatcher_wrap.h
../libbulletc/src/btCollisionObjectWrapper_wrap.cpp
../libbulletc/src/btCollisionObjectWrapper_wrap.h
../libbulletc/src/btCollisionObject_wrap.cpp
../libbulletc/src/btCollisionObject_wrap.h
../libbulletc/src/btCollisionShape_wrap.cpp
../libbulletc/src/btCollisionShape_wrap.h
../libbulletc/src/btCollisionWorld_wrap.cpp
../libbulletc/src/btCollisionWorld_wrap.h
../libbulletc/src/btCompoundCollisionAlgorithm_wrap.cpp
../libbulletc/src/btCompoundCollisionAlgorithm_wrap.h
../libbulletc/src/btCompoundCompoundCollisionAlgorithm_wrap.cpp
../libbulletc/src/btCompoundCompoundCollisionAlgorithm_wrap.h
../libbulletc/src/btCompoundFromGimpact_wrap.cpp
../libbulletc/src/btCompoundFromGimpact_wrap.h
../libbulletc/src/btCompoundShape_wrap.cpp
../libbulletc/src/btCompoundShape_wrap.h
../libbulletc/src/btConcaveShape_wrap.cpp
../libbulletc/src/btConcaveShape_wrap.h
../libbulletc/src/btConeShape_wrap.cpp
../libbulletc/src/btConeShape_wrap.h
../libbulletc/src/btConeTwistConstraint_wrap.cpp
../libbulletc/src/btConeTwistConstraint_wrap.h
../libbulletc/src/btConstraintSolver_wrap.cpp
../libbulletc/src/btConstraintSolver_wrap.h
../libbulletc/src/btContactConstraint_wrap.cpp
../libbulletc/src/btContactConstraint_wrap.h
../libbulletc/src/btContactSolverInfo_wrap.cpp
../libbulletc/src/btContactSolverInfo_wrap.h
../libbulletc/src/btContinuousConvexCollision_wrap.cpp
../libbulletc/src/btContinuousConvexCollision_wrap.h
../libbulletc/src/btConvex2dConvex2dAlgorithm_wrap.cpp
../libbulletc/src/btConvex2dConvex2dAlgorithm_wrap.h
../libbulletc/src/btConvex2dShape_wrap.cpp
../libbulletc/src/btConvex2dShape_wrap.h
../libbulletc/src/btConvexCast_wrap.cpp
../libbulletc/src/btConvexCast_wrap.h
../libbulletc/src/btConvexConcaveCollisionAlgorithm_wrap.cpp
../libbulletc/src/btConvexConcaveCollisionAlgorithm_wrap.h
../libbulletc/src/btConvexConvexAlgorithm_wrap.cpp
../libbulletc/src/btConvexConvexAlgorithm_wrap.h
../libbulletc/src/btConvexHullShape_wrap.cpp
../libbulletc/src/btConvexHullShape_wrap.h
../libbulletc/src/btConvexInternalShape_wrap.cpp
../libbulletc/src/btConvexInternalShape_wrap.h
../libbulletc/src/btConvexPenetrationDepthSolver_wrap.cpp
../libbulletc/src/btConvexPenetrationDepthSolver_wrap.h
../libbulletc/src/btConvexPlaneCollisionAlgorithm_wrap.cpp
../libbulletc/src/btConvexPlaneCollisionAlgorithm_wrap.h
../libbulletc/src/btConvexPointCloudShape_wrap.cpp
../libbulletc/src/btConvexPointCloudShape_wrap.h
../libbulletc/src/btConvexPolyhedron_wrap.cpp
../libbulletc/src/btConvexPolyhedron_wrap.h
../libbulletc/src/btConvexShape_wrap.cpp
../libbulletc/src/btConvexShape_wrap.h
../libbulletc/src/btConvexTriangleMeshShape_wrap.cpp
../libbulletc/src/btConvexTriangleMeshShape_wrap.h
../libbulletc/src/btCpuFeatureUtility_wrap.cpp
../libbulletc/src/btCpuFeatureUtility_wrap.h
../libbulletc/src/btCylinderShape_wrap.cpp
../libbulletc/src/btCylinderShape_wrap.h
../libbulletc/src/btDantzigSolver_wrap.cpp
../libbulletc/src/btDantzigSolver_wrap.h
../libbulletc/src/btDbvtBroadphase_wrap.cpp
../libbulletc/src/btDbvtBroadphase_wrap.h
../libbulletc/src/btDbvt_wrap.cpp
../libbulletc/src/btDbvt_wrap.h
../libbulletc/src/btDefaultCollisionConfiguration_wrap.cpp
../libbulletc/src/btDefaultCollisionConfiguration_wrap.h
../libbulletc/src/btDefaultMotionState_wrap.cpp
../libbulletc/src/btDefaultMotionState_wrap.h
../libbulletc/src/btDefaultSoftBodySolver_wrap.cpp
../libbulletc/src/btDefaultSoftBodySolver_wrap.h
../libbulletc/src/btDiscreteCollisionDetectorInterface_wrap.cpp
../libbulletc/src/btDiscreteCollisionDetectorInterface_wrap.h
../libbulletc/src/btDiscreteDynamicsWorldMt_wrap.cpp
../libbulletc/src/btDiscreteDynamicsWorldMt_wrap.h
../libbulletc/src/btDiscreteDynamicsWorld_wrap.cpp
../libbulletc/src/btDiscreteDynamicsWorld_wrap.h
../libbulletc/src/btDispatcher_wrap.cpp
../libbulletc/src/btDispatcher_wrap.h
../libbulletc/src/btDynamicsWorld_wrap.cpp
../libbulletc/src/btDynamicsWorld_wrap.h
../libbulletc/src/btEmptyCollisionAlgorithm_wrap.cpp
../libbulletc/src/btEmptyCollisionAlgorithm_wrap.h
../libbulletc/src/btEmptyShape_wrap.cpp
../libbulletc/src/btEmptyShape_wrap.h
../libbulletc/src/btFixedConstraint_wrap.cpp
../libbulletc/src/btFixedConstraint_wrap.h
../libbulletc/src/btGearConstraint_wrap.cpp
../libbulletc/src/btGearConstraint_wrap.h
../libbulletc/src/btGeneric6DofConstraint_wrap.cpp
../libbulletc/src/btGeneric6DofConstraint_wrap.h
../libbulletc/src/btGeneric6DofSpring2Constraint_wrap.cpp
../libbulletc/src/btGeneric6DofSpring2Constraint_wrap.h
../libbulletc/src/btGeneric6DofSpringConstraint_wrap.cpp
../libbulletc/src/btGeneric6DofSpringConstraint_wrap.h
../libbulletc/src/btGeometryUtil_wrap.cpp
../libbulletc/src/btGeometryUtil_wrap.h
../libbulletc/src/btGhostObject_wrap.cpp
../libbulletc/src/btGhostObject_wrap.h
../libbulletc/src/btGImpactBvh_wrap.cpp
../libbulletc/src/btGImpactBvh_wrap.h
../libbulletc/src/btGImpactCollisionAlgorithm_wrap.cpp
../libbulletc/src/btGImpactCollisionAlgorithm_wrap.h
../libbulletc/src/btGImpactQuantizedBvh_wrap.cpp
../libbulletc/src/btGImpactQuantizedBvh_wrap.h
../libbulletc/src/btGImpactShape_wrap.cpp
../libbulletc/src/btGImpactShape_wrap.h
../libbulletc/src/btGjkConvexCast_wrap.cpp
../libbulletc/src/btGjkConvexCast_wrap.h
../libbulletc/src/btGjkEpaPenetrationDepthSolver_wrap.cpp
../libbulletc/src/btGjkEpaPenetrationDepthSolver_wrap.h
../libbulletc/src/btGjkPairDetector_wrap.cpp
../libbulletc/src/btGjkPairDetector_wrap.h
../libbulletc/src/btHeightfieldTerrainShape_wrap.cpp
../libbulletc/src/btHeightfieldTerrainShape_wrap.h
../libbulletc/src/btHinge2Constraint_wrap.cpp
../libbulletc/src/btHinge2Constraint_wrap.h
../libbulletc/src/btHingeConstraint_wrap.cpp
../libbulletc/src/btHingeConstraint_wrap.h
../libbulletc/src/btIDebugDraw_wrap.cpp
../libbulletc/src/btIDebugDraw_wrap.h
../libbulletc/src/btKinematicCharacterController_wrap.cpp
../libbulletc/src/btKinematicCharacterController_wrap.h
../libbulletc/src/btLemkeSolver_wrap.cpp
../libbulletc/src/btLemkeSolver_wrap.h
../libbulletc/src/btManifoldPoint_wrap.cpp
../libbulletc/src/btManifoldPoint_wrap.h
../libbulletc/src/btManifoldResult_wrap.cpp
../libbulletc/src/btManifoldResult_wrap.h
../libbulletc/src/btMinkowskiPenetrationDepthSolver_wrap.cpp
../libbulletc/src/btMinkowskiPenetrationDepthSolver_wrap.h
../libbulletc/src/btMinkowskiSumShape_wrap.cpp
../libbulletc/src/btMinkowskiSumShape_wrap.h
../libbulletc/src/btMLCPSolverInterface_wrap.cpp
../libbulletc/src/btMLCPSolverInterface_wrap.h
../libbulletc/src/btMLCPSolver_wrap.cpp
../libbulletc/src/btMLCPSolver_wrap.h
../libbulletc/src/btMotionState_wrap.cpp
../libbulletc/src/btMotionState_wrap.h
../libbulletc/src/btMultiBodyConstraintSolver_wrap.cpp
../libbulletc/src/btMultiBodyConstraintSolver_wrap.h
../libbulletc/src/btMultiBodyConstraint_wrap.cpp
../libbulletc/src/btMultiBodyConstraint_wrap.h
../libbulletc/src/btMultiBodyDynamicsWorld_wrap.cpp
../libbulletc/src/btMultiBodyDynamicsWorld_wrap.h
../libbulletc/src/btMultiBodyFixedConstraint_wrap.cpp
../libbulletc/src/btMultiBodyFixedConstraint_wrap.h
../libbulletc/src/btMultiBodyJointLimitConstraint_wrap.cpp
../libbulletc/src/btMultiBodyJointLimitConstraint_wrap.h
../libbulletc/src/btMultiBodyJointMotor_wrap.cpp
../libbulletc/src/btMultiBodyJointMotor_wrap.h
../libbulletc/src/btMultiBodyLinkCollider_wrap.cpp
../libbulletc/src/btMultiBodyLinkCollider_wrap.h
../libbulletc/src/btMultiBodyLink_wrap.cpp
../libbulletc/src/btMultiBodyLink_wrap.h
../libbulletc/src/btMultiBodyPoint2Point_wrap.cpp
../libbulletc/src/btMultiBodyPoint2Point_wrap.h
../libbulletc/src/btMultiBodySliderConstraint_wrap.cpp
../libbulletc/src/btMultiBodySliderConstraint_wrap.h
../libbulletc/src/btMultiBodySolverConstraint_wrap.cpp
../libbulletc/src/btMultiBodySolverConstraint_wrap.h
../libbulletc/src/btMultiBodyTreeCreator_wrap.cpp
../libbulletc/src/btMultiBodyTreeCreator_wrap.h
../libbulletc/src/btMultiBodyTree_wrap.cpp
../libbulletc/src/btMultiBodyTree_wrap.h
../libbulletc/src/btMultiBody_wrap.cpp
../libbulletc/src/btMultiBody_wrap.h
../libbulletc/src/btMultimaterialTriangleMeshShape_wrap.cpp
../libbulletc/src/btMultimaterialTriangleMeshShape_wrap.h
../libbulletc/src/btMultiSphereShape_wrap.cpp
../libbulletc/src/btMultiSphereShape_wrap.h
../libbulletc/src/btNNCGConstraintSolver_wrap.cpp
../libbulletc/src/btNNCGConstraintSolver_wrap.h
../libbulletc/src/btOptimizedBvh_wrap.cpp
../libbulletc/src/btOptimizedBvh_wrap.h
../libbulletc/src/btOverlappingPairCache_wrap.cpp
../libbulletc/src/btOverlappingPairCache_wrap.h
../libbulletc/src/btOverlappingPairCallback_wrap.cpp
../libbulletc/src/btOverlappingPairCallback_wrap.h
../libbulletc/src/btPersistentManifold_wrap.cpp
../libbulletc/src/btPersistentManifold_wrap.h
../libbulletc/src/btPoint2PointConstraint_wrap.cpp
../libbulletc/src/btPoint2PointConstraint_wrap.h
../libbulletc/src/btPointCollector_wrap.cpp
../libbulletc/src/btPointCollector_wrap.h
../libbulletc/src/btPolarDecomposition_wrap.cpp
../libbulletc/src/btPolarDecomposition_wrap.h
../libbulletc/src/btPolyhedralConvexShape_wrap.cpp
../libbulletc/src/btPolyhedralConvexShape_wrap.h
../libbulletc/src/btQuantizedBvh_wrap.cpp
../libbulletc/src/btQuantizedBvh_wrap.h
../libbulletc/src/btRaycastVehicle_wrap.cpp
../libbulletc/src/btRaycastVehicle_wrap.h
../libbulletc/src/btRigidBody_wrap.cpp
../libbulletc/src/btRigidBody_wrap.h
../libbulletc/src/btScaledBvhTriangleMeshShape_wrap.cpp
../libbulletc/src/btScaledBvhTriangleMeshShape_wrap.h
../libbulletc/src/btSequentialImpulseConstraintSolver_wrap.cpp
../libbulletc/src/btSequentialImpulseConstraintSolver_wrap.h
../libbulletc/src/btSerializer_wrap.cpp
../libbulletc/src/btSerializer_wrap.h
../libbulletc/src/btShapeHull_wrap.cpp
../libbulletc/src/btShapeHull_wrap.h
../libbulletc/src/btSimulationIslandManager_wrap.cpp
../libbulletc/src/btSimulationIslandManager_wrap.h
../libbulletc/src/btSliderConstraint_wrap.cpp
../libbulletc/src/btSliderConstraint_wrap.h
../libbulletc/src/btSoftBodyConcaveCollisionAlgorithm_wrap.cpp
../libbulletc/src/btSoftBodyConcaveCollisionAlgorithm_wrap.h
../libbulletc/src/btSoftBodyHelpers_wrap.cpp
../libbulletc/src/btSoftBodyHelpers_wrap.h
../libbulletc/src/btSoftBodyRigidBodyCollisionConfiguration_wrap.cpp
../libbulletc/src/btSoftBodyRigidBodyCollisionConfiguration_wrap.h
../libbulletc/src/btSoftBodySolvers_wrap.cpp
../libbulletc/src/btSoftBodySolvers_wrap.h
../libbulletc/src/btSoftBody_wrap.cpp
../libbulletc/src/btSoftBody_wrap.h
../libbulletc/src/btSoftRigidCollisionAlgorithm_wrap.cpp
../libbulletc/src/btSoftRigidCollisionAlgorithm_wrap.h
../libbulletc/src/btSoftRigidDynamicsWorld_wrap.cpp
../libbulletc/src/btSoftRigidDynamicsWorld_wrap.h
../libbulletc/src/btSoftSoftCollisionAlgorithm_wrap.cpp
../libbulletc/src/btSoftSoftCollisionAlgorithm_wrap.h
../libbulletc/src/btSparseSdf3_wrap.cpp
../libbulletc/src/btSparseSdf3_wrap.h
../libbulletc/src/btSphereBoxCollisionAlgorithm_wrap.cpp
../libbulletc/src/btSphereBoxCollisionAlgorithm_wrap.h
../libbulletc/src/btSphereShape_wrap.cpp
../libbulletc/src/btSphereShape_wrap.h
../libbulletc/src/btSphereSphereCollisionAlgorithm_wrap.cpp
../libbulletc/src/btSphereSphereCollisionAlgorithm_wrap.h
../libbulletc/src/btSphereTriangleCollisionAlgorithm_wrap.cpp
../libbulletc/src/btSphereTriangleCollisionAlgorithm_wrap.h
../libbulletc/src/btStaticPlaneShape_wrap.cpp
../libbulletc/src/btStaticPlaneShape_wrap.h
../libbulletc/src/btStridingMeshInterface_wrap.cpp
../libbulletc/src/btStridingMeshInterface_wrap.h
../libbulletc/src/btTetrahedronShape_wrap.cpp
../libbulletc/src/btTetrahedronShape_wrap.h
../libbulletc/src/btThreads_wrap.cpp
../libbulletc/src/btThreads_wrap.h
../libbulletc/src/btTransformUtil_wrap.cpp
../libbulletc/src/btTransformUtil_wrap.h
../libbulletc/src/btTriangleBuffer_wrap.cpp
../libbulletc/src/btTriangleBuffer_wrap.h
../libbulletc/src/btTriangleCallback_wrap.cpp
../libbulletc/src/btTriangleCallback_wrap.h
../libbulletc/src/btTriangleIndexVertexArray_wrap.cpp
../libbulletc/src/btTriangleIndexVertexArray_wrap.h
../libbulletc/src/btTriangleIndexVertexMaterialArray_wrap.cpp
../libbulletc/src/btTriangleIndexVertexMaterialArray_wrap.h
../libbulletc/src/btTriangleInfoMap_wrap.cpp
../libbulletc/src/btTriangleInfoMap_wrap.h
../libbulletc/src/btTriangleMeshShape_wrap.cpp
../libbulletc/src/btTriangleMeshShape_wrap.h
../libbulletc/src/btTriangleMesh_wrap.cpp
../libbulletc/src/btTriangleMesh_wrap.h
../libbulletc/src/btTriangleShapeEx_wrap.cpp
../libbulletc/src/btTriangleShapeEx_wrap.h
../libbulletc/src/btTriangleShape_wrap.cpp
../libbulletc/src/btTriangleShape_wrap.h
../libbulletc/src/btTypedConstraint_wrap.cpp
../libbulletc/src/btTypedConstraint_wrap.h
../libbulletc/src/btUniformScalingShape_wrap.cpp
../libbulletc/src/btUniformScalingShape_wrap.h
../libbulletc/src/btUnionFind_wrap.cpp
../libbulletc/src/btUnionFind_wrap.h
../libbulletc/src/btUniversalConstraint_wrap.cpp
../libbulletc/src/btUniversalConstraint_wrap.h
../libbulletc/src/btVehicleRaycaster_wrap.cpp
../libbulletc/src/btVehicleRaycaster_wrap.h
../libbulletc/src/btVoronoiSimplexSolver_wrap.cpp
../libbulletc/src/btVoronoiSimplexSolver_wrap.h
../libbulletc/src/btWheelInfo_wrap.cpp
../libbulletc/src/btWheelInfo_wrap.h
../libbulletc/src/btWorldImporter_wrap.cpp
../libbulletc/src/btWorldImporter_wrap.h
../libbulletc/src/bulletc.h
../libbulletc/src/collections.cpp
../libbulletc/src/collections.h
../libbulletc/src/conversion.h
../libbulletc/src/hacdHACD_wrap.cpp
../libbulletc/src/hacdHACD_wrap.h
../libbulletc/src/main.h	
)

ADD_LIBRARY(libbulletc SHARED ${libbulletc_SRCS})

SET_TARGET_PROPERTIES(libbulletc PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(libbulletc PROPERTIES POSTFIX "")

SET_TARGET_PROPERTIES(libbulletc PROPERTIES VERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(libbulletc PROPERTIES SOVERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(libbulletc PROPERTIES DEBUG_POSTFIX "")


IF(WIN32)
	SET_TARGET_PROPERTIES(libbulletc PROPERTIES SUFFIX ".dll" )
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(
libbulletc 
BulletExampleBrowserLib 
BulletFileLoader 
BulletWorldImporter 
BulletSoftBody 
BulletDynamics 
BulletCollision 
BulletInverseDynamicsUtils 
BulletInverseDynamics 
HACD
LinearMath BussIK Bullet3Common
)


